--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-avancado-boilerplate",
+  "name": "ts-chakra-sign-flow-boilerplate",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -25,10 +25,21 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.0.3",
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
+    "@types/react-redux": "^7.1.12",
+    "axios": "^0.21.0",
+    "formik": "^2.2.6",
+    "framer-motion": "^3.0.0",
     "next": "10.0.3",
     "next-pwa": "^3.1.5",
+    "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "5.2.1"
   },
   "devDependencies": {
